# openweather-api

./: README.md  current_weather_data_extract_load.py  main.py  pyproject.toml
openweather/: main.py
openweather/models/: air_pollution.py  base.py  geocode.py  models.py  onecall.py  weather.py
openweather/utils/: utils.py
